--- a/PhoneScoutAdmin/App.xaml
+++ b/PhoneScoutAdmin/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:PhoneScoutAdmin"
              xmlns:vm="clr-namespace:PhoneScoutAdmin.ViewModels"
              xmlns:views="clr-namespace:PhoneScoutAdmin.Views"
-             StartupUri="ManufacturerHome.xaml">
+             StartupUri="Views/PhoneDetailsView.xaml">
     <Application.Resources>
         
         
