--- a/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
+++ b/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
@@ -1,8 +1,20 @@
-﻿<Window x:Class="PhoneScoutAdmin.PhoneDetails"
+﻿<Window x:Class="PhoneScoutAdmin.PhoneDetailsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:PhoneScoutAdmin.ViewModels"
+        xmlns:views="clr-namespace:PhoneScoutAdmin.Views"
         Title="PhoneDetails" Height="700" Width="1350"
         Background="#f5f5f5">
+    
+    
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:CPUdetailsViewModel}">
+            <views:CPUdetailsView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:SensorsViewModel}">
+            <views:SensorsView/>
+        </DataTemplate>
+    </Window.Resources>
 
     <DockPanel>
         <!-- MENU -->
@@ -66,9 +78,9 @@
                 
                 <Button Grid.Row="0" Content="General Informations" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
-                <Button Grid.Row="1" Content="CPU" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Button Grid.Row="1" Content="CPU" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowCpuCommand}"/>
 
-                <Button Grid.Row="2" Content="Sensors" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Button Grid.Row="2" Content="Sensors" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowSensorsCommand}"/>
 
                 <Button Grid.Row="3" Content="Screen" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
 
@@ -94,26 +106,33 @@
 
             <Grid Grid.Row="1" Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>                    
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-            
 
-                <StackPanel Orientation="Vertical" Grid.Row="2">
+
+                <ContentControl Grid.Row="0" Grid.Column="1"
+                x:Name="MainContent"
+                Content="{Binding CurrentViewModel}" />
+
+
+
+
+
+
+
+
+
+                <StackPanel Orientation="Vertical" Grid.Row="1">
                     <Label Content="Full phone progress: " HorizontalAlignment="Center"/>
-                    <ProgressBar x:Name="progressBar" MaxWidth="800" Height="10" VerticalAlignment="Center"/>
+                    <ProgressBar
+    Minimum="0"
+    Maximum="1"
+    Height="25"
+    Value="{Binding TotalProgress, Mode=OneWay}" />
+
                 </StackPanel>
+
             </Grid>
         </Grid>
     </DockPanel>
