--- a/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
+++ b/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
@@ -3,11 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:PhoneScoutAdmin.ViewModels"
         xmlns:views="clr-namespace:PhoneScoutAdmin.Views"
-        Title="PhoneDetails" Height="700" Width="1350"
+        Title="PhoneDetails" Height="750" Width="1350"
         Background="#f5f5f5">
     
     
     <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:GeneralInfosViewModel}">
+            <views:GeneralInfosView/>
+        </DataTemplate>
         <DataTemplate DataType="{x:Type vm:CPUdetailsViewModel}">
             <views:CPUdetailsView/>
         </DataTemplate>
@@ -26,6 +29,33 @@
         <DataTemplate DataType="{x:Type vm:BodySpeakerViewModel}">
             <views:BodySpeakerView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:CameraSectionViewModel}">
+            <views:CameraSectionView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:CameraViewModel}">
+            <views:CameraView/>
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:ColorSectionViewModel}">
+            <views:ColorSectionView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:ColorViewModel}">
+            <views:ColorView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:RamStorageSectionViewModel}">
+            <views:RamStorageSectionView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:RamStorageViewModel}">
+            <views:RamStorageView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type vm:ImageViewModel}">
+            <views:ImageView/>
+        </DataTemplate>
+
     </Window.Resources>
 
     <DockPanel>
@@ -86,9 +116,11 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
-                
-                <Button Grid.Row="0" Content="General Informations" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+
+                    <Button Grid.Row="0" Content="General Informations" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowGeneralInfosCommand}"/>
 
                     <Button Grid.Row="1" Content="CPU" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowCpuCommand}"/>
 
@@ -102,12 +134,15 @@
 
                     <Button Grid.Row="6" Content="Body and Speaker" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowBodySpeakerCommand}"/>
 
-                <Button Grid.Row="7" Content="Camera" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="7" Content="Camera" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowCameraCommand}"/>
 
-                <Button Grid.Row="8" Content="Ram / Storage" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Button Grid.Row="8" Content="Ram / Storage" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowRamStorageCommand}"/>
 
-                <Button Grid.Row="9" Content="Color" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <Button Grid.Row="9" Content="Color" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowColorCommand}"/>
+                    
+                    <Button Grid.Row="10" Content="Images" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowImagesCommand}"/>
 
+                    <Button Grid.Row="11" Content="load" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding LoadPhoneCommand}" CommandParameter="1"/>
 
 
 
