Admin felület MVVM
Telefon részletes oldal, GET kérés.

--- a/PhoneScoutAdmin/Views/BatteryChargingView.xaml
+++ b/PhoneScoutAdmin/Views/BatteryChargingView.xaml
@@ -66,7 +66,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerUrl, UpdateSourceTrigger=PropertyChanged}" />
+     Text="{Binding BatteryCapacity, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- URL -->
                 <StackPanel Grid.Row="1"
@@ -99,7 +99,7 @@
                      Grid.Column="1"
                      Width="180"
                      Margin="5"
-                     Text="{Binding ManufacturerUrl, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding BatteryType, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- Email -->
                 <StackPanel Grid.Row="2"
@@ -132,7 +132,7 @@
                      Grid.Column="1"
                      Width="180"
                      Margin="5"
-                     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding MaxWiredCharging, UpdateSourceTrigger=PropertyChanged}" />
 
                 <StackPanel Grid.Row="3"
             Grid.Column="0"
@@ -164,7 +164,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />
+     Text="{Binding MaxWirelessCharging, UpdateSourceTrigger=PropertyChanged}" />
 
                 <StackPanel Grid.Row="4"
             Grid.Column="0"
@@ -196,7 +196,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />            
+     Text="{Binding ChargerType, UpdateSourceTrigger=PropertyChanged}" />            
 
                 
             </Grid>
