--- a/PhoneScoutAdmin/Views/CameraView.xaml
+++ b/PhoneScoutAdmin/Views/CameraView.xaml
@@ -2,21 +2,239 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Background="LightGray">
-    <StackPanel Margin="20">
+    <GroupBox Grid.Row="0"
+              Grid.Column="1"
+              Margin="5"
+              Padding="25"
+              Header="Modify the body and speaker details"
+              BorderBrush="#2300B3"
+              BorderThickness="2"
+              VerticalAlignment="Center">
 
-        <TextBlock Text="Camera Details"
-                   FontSize="22"
-                   FontWeight="Bold"
-                   Margin="0,0,0,20"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
 
-        <TextBlock Text="Name"/>
-        <TextBox Text="{Binding Name}" Margin="0,5,0,10"/>
+            </Grid.RowDefinitions>
 
-        <TextBlock Text="Resolution"/>
-        <TextBox Text="{Binding Resolution}" Margin="0,5,0,10"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Megapixels"/>
-        <TextBox Text="{Binding Megapixels}" Margin="0,5,0,10"/>
+            <!-- Name -->
+            <StackPanel Grid.Row="0"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
 
-    </StackPanel>
+
+
+                <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center"
+                               ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera name:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="0"
+     Grid.Column="1"
+     Width="180"
+     Margin="5"
+     Text="{Binding CameraName, UpdateSourceTrigger=PropertyChanged}" />
+
+            <!-- URL -->
+            <StackPanel Grid.Row="1"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera resolution:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="1"
+                     Grid.Column="1"
+                     Width="180"
+                     Margin="5"
+                     Text="{Binding CameraResolution, UpdateSourceTrigger=PropertyChanged}" />
+
+            <!-- Email -->
+            <StackPanel Grid.Row="2"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera aperture:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="2"
+                     Grid.Column="1"
+                     Width="180"
+                     Margin="5"
+                     Text="{Binding CameraAperture, UpdateSourceTrigger=PropertyChanged}" />
+
+            <StackPanel Grid.Row="3"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera focal lenght:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="3"
+     Grid.Column="1"
+     Width="180"
+     Margin="5"
+     Text="{Binding CameraFocalLength, UpdateSourceTrigger=PropertyChanged}" />
+
+            <StackPanel Grid.Row="4"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera OIS:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="4"
+     Grid.Column="1"
+     Width="180"
+     Margin="5"
+     Text="{Binding CameraOIS, UpdateSourceTrigger=PropertyChanged}" />
+
+            <StackPanel Grid.Row="5"
+       Grid.Column="0"
+       Orientation="Horizontal"
+       VerticalAlignment="Center">
+
+
+
+                <TextBlock Text="ℹ"
+          FontSize="14"
+          Foreground="DodgerBlue"
+          Cursor="Hand"
+          VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                    <TextBlock.ToolTip>
+                        <ToolTip>
+                            The manufacturer name of the CPU (e.g., Intel, AMD).
+                        </ToolTip>
+                    </TextBlock.ToolTip>
+
+                </TextBlock>
+                <TextBlock Text="Camera type:"
+          Margin="5,5,2,5"
+          FontSize="16"
+          VerticalAlignment="Center"/>
+            </StackPanel>
+
+            <TextBox Grid.Row="5"
+Grid.Column="1"
+Width="180"
+Margin="5"
+Text="{Binding CameraType, UpdateSourceTrigger=PropertyChanged}" />
+
+            <!-- Save -->
+            <Button Grid.Row="6"
+                    Grid.ColumnSpan="2"
+                    Margin="10,15,10,0"
+                    Padding="5"
+                    FontSize="18"
+                    Background="WhiteSmoke"
+                    BorderBrush="#68F145"
+                    BorderThickness="3"
+                    Content="Save changes"
+                    Command="{Binding SaveManufacturerCommand}" />
+        </Grid>
+    </GroupBox>
 </UserControl>
