--- a/PhoneScoutAdmin/Views/RamStorageView.xaml
+++ b/PhoneScoutAdmin/Views/RamStorageView.xaml
@@ -2,21 +2,110 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Background="LightGray">
-    <StackPanel Margin="20">
+    <Grid Margin="10">
 
-        <TextBlock Text="Camera Details"
-                   FontSize="22"
-                   FontWeight="Bold"
-                   Margin="0,0,0,20"/>
 
-        <TextBlock Text="Name"/>
-        <TextBox Text="{Binding Name}" Margin="0,5,0,10"/>
+        <!-- ===================== -->
+        <!-- EDIT PANEL -->
+        <!-- ===================== -->
 
-        <TextBlock Text="Resolution"/>
-        <TextBox Text="{Binding Resolution}" Margin="0,5,0,10"/>
+        <GroupBox Grid.Row="0"
+              Grid.Column="1"
+              Margin="5"
+              Padding="25"
+              Header="Modify the CPU details"
+              BorderBrush="#2300B3"
+              BorderThickness="2"
+              VerticalAlignment="Center">
 
-        <TextBlock Text="Megapixels"/>
-        <TextBox Text="{Binding Megapixels}" Margin="0,5,0,10"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
 
-    </StackPanel>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Name -->
+                <StackPanel Grid.Row="0"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                    <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center"
+                               ToolTipService.InitialShowDelay="500">
+
+                        <TextBlock.ToolTip>
+                            <ToolTip>
+                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                            </ToolTip>
+                        </TextBlock.ToolTip>
+
+                    </TextBlock>
+                    <TextBlock Text="Ram amount:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+                </StackPanel>
+
+                <TextBox Grid.Row="0"
+     Grid.Column="1"
+     Width="180"
+     Margin="5"
+     Text="{Binding RamAmount, UpdateSourceTrigger=PropertyChanged}" />
+
+                <!-- URL -->
+                <StackPanel Grid.Row="1"
+            Grid.Column="0"
+            Orientation="Horizontal"
+            VerticalAlignment="Center">
+
+
+
+                    <TextBlock Text="ℹ"
+               FontSize="14"
+               Foreground="DodgerBlue"
+               Cursor="Hand"
+               VerticalAlignment="Center" ToolTipService.InitialShowDelay="500">
+
+                        <TextBlock.ToolTip>
+                            <ToolTip>
+                                The manufacturer name of the CPU (e.g., Intel, AMD).
+                            </ToolTip>
+                        </TextBlock.ToolTip>
+
+                    </TextBlock>
+                    <TextBlock Text="Storgae amount:"
+               Margin="5,5,2,5"
+               FontSize="16"
+               VerticalAlignment="Center"/>
+                </StackPanel>
+
+                <TextBox Grid.Row="1"
+                     Grid.Column="1"
+                     Width="180"
+                     Margin="5"
+                     Text="{Binding StorageAmount, UpdateSourceTrigger=PropertyChanged}" />
+
+            </Grid>
+        </GroupBox>
+
+
+
+    </Grid>
 </UserControl>
