--- a/PhoneScoutAdmin/Views/ScreenView.xaml
+++ b/PhoneScoutAdmin/Views/ScreenView.xaml
@@ -66,7 +66,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerUrl, UpdateSourceTrigger=PropertyChanged}" />
+     Text="{Binding ScreenType, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- URL -->
                 <StackPanel Grid.Row="1"
@@ -99,7 +99,7 @@
                      Grid.Column="1"
                      Width="180"
                      Margin="5"
-                     Text="{Binding ManufacturerUrl, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding ScreenResH, UpdateSourceTrigger=PropertyChanged}" />
 
                 <!-- Email -->
                 <StackPanel Grid.Row="2"
@@ -132,7 +132,7 @@
                      Grid.Column="1"
                      Width="180"
                      Margin="5"
-                     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />
+                     Text="{Binding ScreenResW, UpdateSourceTrigger=PropertyChanged}" />
 
                 <StackPanel Grid.Row="3"
             Grid.Column="0"
@@ -164,7 +164,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />
+     Text="{Binding ScreenSize, UpdateSourceTrigger=PropertyChanged}" />
 
                 <StackPanel Grid.Row="4"
             Grid.Column="0"
@@ -196,7 +196,7 @@
      Grid.Column="1"
      Width="180"
      Margin="5"
-     Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />
+     Text="{Binding ScreenRefreshRate, UpdateSourceTrigger=PropertyChanged}" />
 
 
                 <StackPanel Grid.Row="5"
@@ -229,7 +229,7 @@
 Grid.Column="1"
 Width="180"
 Margin="5"
-Text="{Binding ManufacturerEmail, UpdateSourceTrigger=PropertyChanged}" />               
+Text="{Binding ScreenMaxBrightness, UpdateSourceTrigger=PropertyChanged}" />               
 
                
             </Grid>
