--- a/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
+++ b/PhoneScoutAdmin/Views/PhoneDetailsView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:PhoneScoutAdmin.ViewModels"
         xmlns:views="clr-namespace:PhoneScoutAdmin.Views"
-        Title="PhoneDetails" Height="750" Width="1350"
+        Title="PhoneDetails" Height="900" Width="1350"
         Background="#f5f5f5">
     
     
@@ -118,6 +118,7 @@
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
 
                     <Button Grid.Row="0" Content="General Informations" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding ShowGeneralInfosCommand}"/>
@@ -144,7 +145,7 @@
 
                     <Button Grid.Row="11" Content="save" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding SavePhoneCommand}" CommandParameter="1"/>
 
-
+                    <Button Grid.Row="12" Content="load" Margin="15,10,15,0" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding LoadPhoneCommand}" CommandParameter="1"/>
 
                 </Grid>
             </StackPanel>
